--- a/config-example/bot.properties
+++ b/config-example/bot.properties
@@ -1,20 +1,20 @@
 # bot.properties - the bot configuration file.
 
 # Put here the token of the bot, that you created through the Discord developer portal.
-token=
+token=Njg1Nzk2NTY0ODQwNzQyOTUw.XmN3-g.YfAF-5b4ru68VypPl1NN40n7TqU
 
 # The default prefix of the bot. Used if no custom prefix is configured for the guild and for commands used in DMs.
 default_prefix=!
 
 # The ID of the channel where the bot can send debug messages and crash reports.
-debug_log_channel_id=
+debug_log_channel_id=685797803418583152
 
 # The ID of the channel where the bot can upload files for later use in embeds.
-attachments_channel_id=
+attachments_channel_id=685797803418583152
 
 # A comma-separated list of guild IDs that the bot will use as resources to find emojis.
 # Example: "361255823357509645,357655103768887297"
-emoji_guild_ids=
+emoji_guild_ids=357655103768887297
 
 # Configure here the default presence status of the bot when it's running.
 # The syntax for presence_activity is the following: "status:text". For example: "playing:Geometry Dash" or "watching:YouTube videos".
